--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,18 +1,15 @@
 /* HEADER */
 #container {
   width: 100%;
-  min-width: 720px;
   height: 235px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   row-gap: 2em;
-
 }
 
 #container > .header {
   grid-column: 1/5;
   box-shadow: 2px 2px 2px rgb(238, 238, 238);
-
 }
 
 #envio {
@@ -23,7 +20,7 @@
 #envio p {
   color: white;
   font-family: "Roboto", sans-serif;
-  font-size: 0.6vw;
+  font-size: 10px;
   text-align: center;
   letter-spacing: 4px;
   word-spacing: 5px;
@@ -33,7 +30,6 @@
   margin: 40px 0;
   text-align: center;
 }
-
 
 #nav nav {
   width: 40%;
@@ -55,7 +51,7 @@
   color: black;
   text-decoration: none;
   font-weight: 800;
-  font-size: 0.85vw;
+  font-size: 14px;
 }
 
 .opciones {
@@ -78,220 +74,204 @@
 li:hover > .opciones {
   display: block;
 }
-
 /** HORARIOS */
 
-.contacto{ 
-  width: 50%;
+.contacto {
+  width: 70%;
   display: flex;
   flex-wrap: wrap;
   grid-column: 1/5;
   margin: 40px auto;
-  justify-content: space-evenly;
+  justify-content: space-between;
   text-align: center;
- 
-
 }
-.horario{
-  width: 45%;
+.horario {
+  width: auto;
 }
-.horario > img{
-  width: 20%;
-  margin-bottom: 40px
+.horario > img {
+  width: 15%;
+  margin-bottom: 40px;
 }
-.img{
+.img {
   margin: 50px auto;
-  width: 350px;
+  width: 400px;
 }
-.horario p{
- font-family: "Roboto", sans-serif;
- font-size: 0.83vw;
- color: black;
+.horario p {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: black;
 }
 
-.horario h3{
-  font-family: 'Playfair Display', serif;
+.horario h3 {
+  font-family: "Playfair Display", serif;
   font-weight: 900;
-   font-size: 1.5vw;
+  font-size: 30px;
   margin-bottom: 20px;
   color: black;
 }
 
-
 /** FORMULARIO */
 
-.formulario{
+.formulario {
   width: 50%;
   height: 600px;
   grid-column: 1/5;
   text-align: center;
   margin: 40px auto;
 }
-.formulario h3{
-  font-family: 'Playfair Display', serif;
+.formulario h3 {
+  font-family: "Playfair Display", serif;
   font-weight: 900;
-  font-size: 1.5vw;
+  font-size: 30px;
   margin-bottom: 20px;
   color: black;
-  
 }
 
-.forms{
-  width: 40%; 
+.forms {
+  width: 40%;
   min-width: 340px;
   margin: 40px auto;
   padding: 40px;
-  background-color:#f5f5f5;
+  background-color: #f5f5f5;
   border-radius: 5px;
 }
 
-.datos{
+.datos {
   position: relative;
   margin-bottom: 25px;
-
 }
-:root{
+:root {
   --colorTextos: rgb(36, 36, 36);
 }
-input{
+input {
   width: 80%;
   margin: 0px auto;
-  background:none;
+  background: none;
   font-size: 18px;
-  padding:20px 0px 10px 0px;
+  padding: 20px 0px 10px 0px;
   display: block;
   border: none;
   border-bottom: 1px solid rgb(104, 104, 104);
 }
-textarea{
-  background:  #ffffff;
+textarea {
+  background: #ffffff;
   width: 100%;
-  color:black;
+  color: black;
   padding: 10px 10px 10px 5px;
   border: none;
   resize: none;
 }
 
-input:focus{
+input:focus {
   outline: none;
   color: rgb(94, 93, 93);
 }
 
-label{
+label {
   font-family: "Roboto", sans-serif;
   color: var(--colorTextos);
-  font-size: 0.7vw;
+  font-size: 15px;
   position: absolute;
   left: 110px;
-  top:10px;
+  top: 10px;
   transition: 0.5s ease-in-out all;
   pointer-events: none;
 }
 
-input:focus~label,
-input:valid~label{
+input:focus ~ label,
+input:valid ~ label {
   top: -14px;
   font-size: 12px;
-  color:  #a770d1;
+  color: #a770d1;
 }
 
-
-
-.barra{
+.barra {
   position: relative;
   display: block;
   width: 100%;
 }
 
-.barra::before{
+.barra::before {
   content: "";
   height: 2px;
   width: 0%;
   position: absolute;
-  background: linear-gradient(to right, #d993db, #ebb2e1 );
+  background: linear-gradient(to right, #d993db, #ebb2e1);
   left: 30px;
 }
 
-
-input:focus~.barra::before{
+input:focus ~ .barra::before {
   width: 80%;
 }
 
-button{
+button {
   font-family: "Roboto", sans-serif;
   background: #e1baff;
-  border:none;
-  width: 70%; 
+  border: none;
+  width: 70%;
   height: 40px;
-  margin:5px auto;
+  margin: 5px auto;
   color: white;
-  font-size: 0.8vw;
+  font-size: 14px;
   cursor: pointer;
   border-radius: 5px;
 }
 
-@media screen and (max-width: 500px){
-  formulario{
+@media screen and (max-width: 500px) {
+  formulario {
     width: 80%;
   }
 }
 
-
-
 /** FOOTER */
-footer { 
-  background-color: #f3f3f3; 
+footer {
+  background-color: #f3f3f3;
   grid-column: 1/5;
   height: 100%;
 }
 
-
-#footer{
+#footer {
   width: 75%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 50px  0px;
+  padding: 50px 0px;
   margin: 0px auto;
 }
-#footer h4{
+#footer h4 {
   font-family: "Roboto", sans-serif;
   font-weight: 600;
-  margin-bottom: 25px  ;
+  margin-bottom: 25px;
 }
 
-#redes > nav > ul > li{
+#redes > nav > ul > li {
   margin-bottom: 15px;
   list-style: none;
 }
-#redes > nav > ul{
+#redes > nav > ul {
   padding: 0;
 }
-#redes img{
+#redes img {
   width: 10%;
   margin-right: 5px;
 }
 
-#servicio{
+#servicio {
   width: 22%;
 }
 
-#servicio > nav > ul > li{
+#servicio > nav > ul > li {
   margin-bottom: 8px;
   list-style: none;
 }
-#servicio > nav > ul{
+#servicio > nav > ul {
   padding: 0;
 }
 
-
-
-#footer  > #antonella {
+#footer > #antonella {
   width: 22%;
   margin-right: 50px;
 }
-
-
 
 #cp {
   width: 100%;
@@ -300,14 +280,13 @@ footer {
   text-align: center;
   color: rgb(255, 255, 255);
 }
-#cp > p{
-  
+#cp > p {
   font-family: "Roboto", sans-serif;
- font-size: 0.7vw;
- letter-spacing: 3px;
+  font-size: 0.7vw;
+  letter-spacing: 3px;
 }
-#footer  a, #footer p {
- 
+#footer a,
+#footer p {
   font-family: "Roboto", sans-serif;
   color: rgb(139, 139, 139);
 }
@@ -316,10 +295,3 @@ a:hover {
   color: rgb(129, 129, 129);
   text-decoration: none;
 }
-
-
-
-
-  
-
-
