--- a/css/producto.css
+++ b/css/producto.css
@@ -1,4 +1,3 @@
-
 /* HEADER */
 #container {
   width: 100%;
@@ -14,7 +13,7 @@
   box-shadow: 2px 2px 2px rgb(238, 238, 238);
 }
 #container > .producto {
-  width:75%;
+  width: 75%;
   margin-left: 200px;
   grid-column: 1/4;
   margin-top: 20px;
@@ -24,11 +23,10 @@
   padding-left: 15px;
   grid-column: 4/6;
 }
-#container >.sugerencia{
+#container > .sugerencia {
   width: 80%;
   margin: 40px auto;
   grid-column: 1/6;
-
 }
 #envio {
   width: 100%;
@@ -38,7 +36,7 @@
 #envio p {
   color: white;
   font-family: "Roboto", sans-serif;
-  font-size: 0.6vw;
+  font-size: 10px;
   text-align: center;
   letter-spacing: 4px;
   word-spacing: 5px;
@@ -48,7 +46,6 @@
   margin: 40px 0;
   text-align: center;
 }
-
 
 #nav nav {
   width: 40%;
@@ -70,9 +67,8 @@
   color: black;
   text-decoration: none;
   font-weight: 800;
-  font-size: 0.85vw;
+  font-size: 14px;
 }
-
 
 .opciones {
   display: none;
@@ -114,36 +110,28 @@ li:hover > .opciones {
 }
 
 /**  DESCRIPCIÓN DEL PRODUCTO*/
-.descripcion-p{
- 
+.descripcion-p {
   margin-top: 40px;
   font-family: "Roboto", sans-serif;
-  
 }
-.titulo > h2{ 
-  font-family: 'Playfair Display', serif;
-  font-size: 2vw;
-  font-weight: bold;
-
-}
-.colores> h4{
-  font-family: 'Playfair Display', serif;
-  font-size: 1vw;
+.titulo > h2 {
+  font-family: "Playfair Display", serif;
+  font-size: 38px;
   font-weight: bold;
 }
-.tallas > h4{
-  font-family: 'Playfair Display', serif;
-  font-size: 1vw;
+.colores > h4,
+.tallas > h4 {
+  font-family: "Playfair Display", serif;
+  font-size: 18px;
   font-weight: bold;
 }
-.descripcion-tarjeta{
+.descripcion-tarjeta {
   font-size: 1vw;
 }
-.precios p{ 
+.precios p {
   font-family: "Roboto", sans-serif;
-  font-size: 2vw;
+  font-size: 28px;
   font-weight: 600;
-
 }
 .colores {
   width: 80%;
@@ -249,8 +237,8 @@ li:hover > .opciones {
   border: 0.5px solid rgb(155, 155, 155);
 }
 /** OVERLAY*/
-.overlay{
-  background-color: rgba(0, 0,0,.5);
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
   top: 0;
   left: 0;
@@ -260,53 +248,52 @@ li:hover > .opciones {
   align-items: center;
   justify-content: center;
   visibility: hidden;
-
 }
-.overlay.active{
+.overlay.active {
   visibility: visible;
 }
-.popup{
+.popup {
   background-color: #ffffff;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0,0,.3);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
   border-radius: 3px;
-  width: 50%;
-  height: 700px;
+  width: 75%;
   padding: 50px;
 }
-.popup .btn-cerrar-popup{
-  font-size: 2vw;
+.popup .btn-cerrar-popup {
+  font-size: 30px;
   display: block;
   color: rgb(0, 0, 0);
-  transition: .1s ease all;
+  transition: 0.1s ease all;
 }
-.popup .btn-cerrar-popup:hover{
+.popup .btn-cerrar-popup:hover {
   color: #707070;
 }
-.popup h3{
+.popup h3 {
   text-align: center;
+  font-size: 35px;
   font-weight: 700;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
 }
 
-.div-img{
-  width: 85%;
+.div-img {
+  width: 70%;
   margin: 0px auto;
 }
 
 /** SUGERENCIAS */
-.apartado{
+.apartado {
   display: flex;
   justify-content: space-between;
 }
-.sugerencia >h2{
+.sugerencia > h2 {
   color: #000000;
   text-align: center;
-  font-size: 1.80vw;
+  font-size: 30px;
   font-weight: 600;
   margin-bottom: 50px;
-  font-family: 'Playfair Display', serif;
+  font-family: "Playfair Display", serif;
 }
-.articulo{
+.articulo {
   width: 22%;
 }
 
@@ -316,26 +303,17 @@ li:hover > .opciones {
   border: 1px solid rgb(219, 219, 219);
 }
 .articulo h2 {
-  width: 80%;
-  font-family: 'Playfair Display', serif;
-  font-size: 1.3vw;
+  font-family: "Playfair Display", serif;
+  font-size: 20px;
   font-weight: 900;
 }
 
-.articulo h2 {
-  width: 80%;
-  font-family: 'Playfair Display', serif;
-  font-size: 1.3vw;
-  font-weight: 900;
-}
 .articulo article p {
-  font-size: 1.1vw;
+  font-size: 15px;
   font-weight: bold;
-  margin-right: 5px;
-  font-family:"Roboto", sans-serif;
-
+  font-family: "Roboto", sans-serif;
 }
-.articulo > article >button {
+.articulo > article > button {
   width: 100%;
   height: 50px;
   border: none;
@@ -343,70 +321,65 @@ li:hover > .opciones {
   background-color: #ffe1f6;
   opacity: 70%;
 }
-.articulo > article >button:hover {
+.articulo > article > button:hover {
   opacity: 100%;
 }
-article a{
+article a {
   color: #000000;
-  font-family: 'Playfair Display', serif;
-  font-size: 1vw;
+  font-family: "Playfair Display", serif;
+  font-size: 15px;
   font-weight: 600;
 }
 
 /* * FOOTER */
-footer { 
-  background-color: #f3f3f3; 
+footer {
+  background-color: #f3f3f3;
   grid-column: 1/6;
   height: 100%;
 }
 
-
-#footer{
+#footer {
   width: 75%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 50px  0px;
+  padding: 50px 0px;
   margin: 0px auto;
 }
-#footer h4{
+#footer h4 {
   font-family: "Roboto", sans-serif;
   font-weight: 600;
-  margin-bottom: 25px  ;
+  margin-bottom: 25px;
 }
 
-#redes > nav > ul > li{
+#redes > nav > ul > li {
   margin-bottom: 15px;
   list-style: none;
 }
-#redes > nav > ul{
+#redes > nav > ul {
   padding: 0;
 }
-#redes img{
+#redes img {
   width: 10%;
   margin-right: 5px;
 }
 
-#servicio{
+#servicio {
   width: 22%;
 }
 
-#servicio > nav > ul > li{
+#servicio > nav > ul > li {
   margin-bottom: 8px;
   list-style: none;
 }
-#servicio > nav > ul{
+#servicio > nav > ul {
   padding: 0;
 }
 
-
-
-#footer  > #antonella {
+#footer > #antonella {
   width: 22%;
   margin-right: 50px;
 }
-
-
 
 #cp {
   width: 100%;
@@ -415,14 +388,13 @@ footer {
   text-align: center;
   color: rgb(255, 255, 255);
 }
-#cp > p{
-  
+#cp > p {
   font-family: "Roboto", sans-serif;
- font-size: 0.7vw;
- letter-spacing: 3px;
+  font-size: 0.7vw;
+  letter-spacing: 3px;
 }
-#footer  a, #footer p {
- 
+#footer a,
+#footer p {
   font-family: "Roboto", sans-serif;
   color: rgb(139, 139, 139);
 }
@@ -431,4 +403,3 @@ a:hover {
   color: rgb(129, 129, 129);
   text-decoration: none;
 }
-
