--- a/css/zapatos.css
+++ b/css/zapatos.css
@@ -1,4 +1,3 @@
-
 /* HEADER */
 #container {
   width: 100%;
@@ -12,7 +11,6 @@
 #container > .header {
   grid-column: 1/5;
   box-shadow: 2px 2px 2px rgb(238, 238, 238);
-
 }
 
 #envio {
@@ -23,7 +21,7 @@
 #envio p {
   color: white;
   font-family: "Roboto", sans-serif;
-  font-size: 0.6vw;
+  font-size: 10px;
   text-align: center;
   letter-spacing: 4px;
   word-spacing: 5px;
@@ -33,7 +31,6 @@
   margin: 40px 0;
   text-align: center;
 }
-
 
 #nav nav {
   width: 40%;
@@ -55,7 +52,7 @@
   color: black;
   text-decoration: none;
   font-weight: 800;
-  font-size: 0.85vw;
+  font-size: 14px;
 }
 
 .opciones {
@@ -72,7 +69,7 @@
   width: 60% !important;
   display: block !important;
   margin-bottom: 8px;
-  font-size: 0.85vw;
+  font-size: 1.1rem;
 }
 
 li:hover > .opciones {
@@ -96,17 +93,17 @@ li:hover > .opciones {
   width: 90%;
   margin: 25px auto;
 }
-.aside > aside > nav > ul> li >a{
+.aside > aside > nav > ul > li > a {
   text-decoration: none;
   color: black;
 }
-.aside > aside > nav > ul >li:last-child >a{
-color: #9d59d1;
+.aside > aside > nav > ul > li:last-child > a {
+  color: #9d59d1;
 }
 .aside h2 {
   /* margin-bottom: 20px; */
   font-family: "Roboto", sans-serif;
-  font-size: 1.1vw;
+  font-size: 15px;
   margin-left: 30px;
   font-weight: 800;
 }
@@ -117,7 +114,7 @@ color: #9d59d1;
 .aside nav ul li {
   list-style: none;
   font-family: "Roboto", sans-serif;
-  font-size: 0.8vw;
+  font-size: 13px;
   margin-bottom: 15px;
   padding: 10px;
 }
@@ -135,7 +132,7 @@ color: #9d59d1;
   margin-left: -60px;
 }
 
-.nuevo { 
+.nuevo {
   width: 4%;
   min-width: 51px;
   height: 25px;
@@ -143,15 +140,14 @@ color: #9d59d1;
   margin-top: -10px;
   margin-left: -35px;
   background-color: #e1baff;
- 
 }
 .nuevo p {
   font-family: "Roboto", sans-serif;
   text-align: center;
-  font-size: 0.8vw;
+  font-size: 14px;
   line-height: 25px;
 }
-article{
+article {
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -165,77 +161,71 @@ article{
 }
 .new h2 {
   width: 80%;
-  font-family: 'Playfair Display', serif;
-  font-size: 1.3vw;
+  font-family: "Playfair Display", serif;
+  font-size: 20px;
   font-weight: 900;
 }
 .new article p {
-  font-size: 1vw;
+  font-size: 15px;
   font-weight: bold;
   margin-right: 5px;
-  font-family:"Roboto", sans-serif;
-
+  font-family: "Roboto", sans-serif;
 }
 
-article a{
+article a {
   color: grey;
-  font-size: 0.8vw;
+  font-size: 13px;
   text-decoration: underline;
 }
 /* * FOOTER */
-footer { 
-  background-color: #f3f3f3; 
+footer {
+  background-color: #f3f3f3;
   grid-column: 1/6;
   height: 100%;
 }
 
-
-#footer{
+#footer {
   width: 75%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 50px  0px;
+  padding: 50px 0px;
   margin: 0px auto;
 }
-#footer h4{
+#footer h4 {
   font-family: "Roboto", sans-serif;
   font-weight: 600;
-  margin-bottom: 25px  ;
+  margin-bottom: 25px;
 }
 
-#redes > nav > ul > li{
+#redes > nav > ul > li {
   margin-bottom: 15px;
   list-style: none;
 }
-#redes > nav > ul{
+#redes > nav > ul {
   padding: 0;
 }
-#redes img{
+#redes img {
   width: 10%;
   margin-right: 5px;
 }
 
-#servicio{
+#servicio {
   width: 22%;
 }
 
-#servicio > nav > ul > li{
+#servicio > nav > ul > li {
   margin-bottom: 8px;
   list-style: none;
 }
-#servicio > nav > ul{
+#servicio > nav > ul {
   padding: 0;
 }
 
-
-
-#footer  > #antonella {
+#footer > #antonella {
   width: 22%;
   margin-right: 50px;
 }
-
-
 
 #cp {
   width: 100%;
@@ -244,14 +234,13 @@ footer {
   text-align: center;
   color: rgb(255, 255, 255);
 }
-#cp > p{
-  
+#cp > p {
   font-family: "Roboto", sans-serif;
- font-size: 0.7vw;
- letter-spacing: 3px;
+  font-size: 0.7vw;
+  letter-spacing: 3px;
 }
-#footer  a, #footer p {
- 
+#footer a,
+#footer p {
   font-family: "Roboto", sans-serif;
   color: rgb(139, 139, 139);
 }
@@ -260,4 +249,3 @@ a:hover {
   color: rgb(129, 129, 129);
   text-decoration: none;
 }
-
